added initial cv website file

--- a/index.html
+++ b/index.html
@@ -3,63 +3,56 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Advaits's Personal Site</title>
+  <title>Advait Nair</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-  <h1>Advait Nair</h1>
-  <p>a middle schooler who wants to be a web devolper</p>
-  <p>I am learning how to code in HTML,CSS,and JAVASCRIPT.</p>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Went to <a href="http://www.katyisd.org/campus/RAE/Pages/default.aspx">Alexander Elementary School</a></li>
-    <li>Goes to <a href="http://www.katyisd.org/campus/bdjh/Pages/default.aspx">Beckendorf Junior High</a></li>
-  </ul>
-  <hr>
-  <h3>Skills</h3>
-  <p>Disclaimer!each star is how many stars there out of five</p>
-  <table>
-    <tr>
-      <td>
-        <table border="1" cellspacing="10">
-          <tr>
-            <td>School</td>
-            <td>⭐️⭐️⭐️</td>
-          </tr>
-          <tr>
-            <td>Web devolper</td>
-            <td>⭐️⭐️</td>
-          </tr>
-          <tr>
-            <td>Drawing</td>
-            <td>⭐️⭐️⭐️</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table border="1" cellspacing="10">
-        <tr>
-          <td>Eating</td>
-          <td>⭐️⭐️⭐️⭐️⭐️
-        </tr>
-        <tr>
-          <td>Playing Games</td>
-          <td>⭐️⭐️⭐️⭐️⭐️</td>
-        </tr>
-        <tr>
-          <td>Cooking</td>
-          <td>⭐️</td>
-        </tr>
-      </table></td>
-    </tr>
-  </table>
-  <hr>
-  <h3>My Hobbies</h3>
-  <a href="hobbies.html">click here to see my hobbies</a>
-  <hr>
-  <h3>Contact Me</h3>
-  <a href="contact.html">click here to contact me</a>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1><em>I'm Advait</em>.</h1>
+    <h2>a <span class="pro">pro</span>grammer.</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-imgf">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="me" src="images/advait.png" alt="Error">
+      <h2>Hello.</h2>
+      <p class="intro">I am a amatuer web devolper. My goal is to become one of the best web devolpers in the world. I love anything electronic related and my favorite food is orange chicken.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills/Hobbies.</h2>
+      <div class="skill-row">
+        <img class="code-img" src="https://image.flaticon.com/icons/svg/3094/3094450.svg" alt="code-img">
+        <h3>Coding</h3>
+        <p>Coding is a new skill I started learning at the age of 12 (I'm still 12 in 2020). I am still learning how to be a better programmer. Coding has let the creative side and the "smart" side of my brain work togther to make some thing special. I firsted coding so I could learn how to make video games.</p>
+      </div>
+      <div class="skill-row">
+        <img class="controller-img" src="https://image.flaticon.com/icons/svg/2972/2972291.svg" alt="">
+        <h3>Gaming</h3>
+        <p>Gaming is one of my favorite hobby. It help me relax,and stay connected to my friends. I play on my mac and my shared nintendo. I play mostly roblox and fortnite with my friends. </p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Have questions about what I do?</h3>
+      <p class="contact-message">Love coding and play games as much as I do? Press the "Contact me" so we can talk!</p>
+      <a class="myButton" href="mailto:advaitisepic@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a href="https://gmail.com">gmail</a>
+    <p class="copyright">© 2020 Advait Nair.</p>
+  </div>
+
+
+
 </body>
 
 </html>
